@@ -6,6 +6,10 @@ Release 0.19.1 - Unreleased
    HBASE-1129  Master won't go down; stuck joined on rootScanner 
    HBASE-1138  Make HLog block size configurable
 
+  IMPROVEMENTS
+   HBASE-845   HCM.isTableEnabled doesn't really tell if it is, or not
+   HBASE-903   [shell] Can't set table descriptor attributes when I alter a table
+
 Release 0.19.0
   INCOMPATIBLE CHANGES
    HBASE-885   TableMap and TableReduce should be interfaces
